--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue&display=swap');
+  body { 
+    font-family: 'Helvetica Neue', sans-serif; 
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
